# risk

./: .gitignore  CMakeLists.txt  testboard.txt  testboard2.txt
data/: territories.json
src/: card.cpp  card.h  console.cpp  console.h  game.cpp  game.h  human_agent.cpp  human_agent.h  i_agent.cpp  i_agent.h  main.cpp  makefile  map.cpp  map.h  planning_agent.cpp  planning_agent.h  planning_agent_v2.cpp  planning_agent_v2.h  random_agent.cpp  random_agent.h  territory.cpp  territory.h
